# SDL_nmix

./: .gitignore  CMakeLists.txt  SDL_nmix.h  SDL_nmix_file.h
.github/workflows/: nix.yml  windows.yml
